--- a/frontend/src/components/productCard.css
+++ b/frontend/src/components/productCard.css
@@ -36,13 +36,43 @@
     /* height: 50%; */
 }
 
+.prod-model-comp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 25%
+}
+
+.prod-why-comp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-wrap: inherit;
+    text-wrap-mode: wrap;
+    text-wrap-style: balance;
+    height: 50%;
+}
+
 #prod-deets {
+    height: 80%;
     text-align: center;
     font-size: medium;
     color: #3b3b3b;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2.5%;
+}
+
+#more-info-link {
+    width: 80%;
 }
 
 .more-info {
+    height: 10%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -50,8 +80,9 @@
 }
 
 .more-info button {
+    width: 100%;
     margin: 2%;
-    padding: 3%;
+    padding: 5%;
     border-radius: 10px;
     border: none;
     cursor: pointer;
@@ -65,6 +96,7 @@
 }
 
 .more-info #wish {
+    width: 20%;
     background-color: #d9d9d9;
 }
 
@@ -75,4 +107,11 @@
 .more-info #heart {
     /* color: #bd4040; */
     color: #b9b7b7;
+}
+
+.more-info #heart:hover {
+    font-size: 1.4rem;
+    transform: translateY(-2px);
+    color: #bdacac;
+    /* box-shadow: 0 3px 12px rgba(0, 0, 0, 0.766); */
 }
