--- a/frontend/src/components/productPage.css
+++ b/frontend/src/components/productPage.css
@@ -35,38 +35,39 @@
 
 .main-cont
 {
-    margin: 2%;
+    margin: 1%;
     width: 88%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-self: center;
-    
+    scroll-behavior: smooth;
     background-color: #3b3b3b;
     border-radius: 30px;
 }
 
+
+
 #go-to-compare
 {
-    width: 100%;
-    margin: 2%;
+    width: 80%;
+    margin-right: 10%;
+    /* margin: 2%; */
     display: flex;
     justify-content: center;    
 }
 
-#go-to-compare button
+* #go-to-compare button
 {   
     background-color: #d9d9d9;
     color: #3b3b3b;
-    padding: 20%;
-    padding-left: 35%;
-    padding-right: 35%;
-    margin: 40%;
+    margin: 50%;
+    padding: 25% 60% 25% 60%;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
     border-radius: 25px;
     font-weight: bolder;
-    font-size: large;
+    font-size: 1.2em;
     
 }
 
@@ -76,7 +77,7 @@
     color: white;
     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.5);
     transform: translateY(-2px);
-}
+} 
 
 .query-section {
     width: 90%;
